--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -237,6 +237,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install JDK (prerequisite for Maestro)
+        run: sudo apt-get update && sudo apt-get install -y default-jre
+
+      - name: Install Maestro CLI
+        run: curl -fsSL https://get.maestro.mobile.dev | bash
+
       - name: Run Maestro E2E
         run: |
           maestro test \
