--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -238,15 +238,24 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install JDK (prerequisite for Maestro)
-        run: sudo apt-get update && sudo apt-get install -y default-jre
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
 
       - name: Install Maestro CLI
         run: curl -fsSL https://get.maestro.mobile.dev | bash
 
+      - name: Add Maestro to PATH
+        run: echo "$HOME/.maestro/bin" >> $GITHUB_PATH
+
+      - name: Verify Maestro is on PATH
+        run: which maestro && maestro --version
+
       - name: Run Maestro E2E
         run: |
           maestro test \
-            --build-id ${{ steps.preview.outputs.android-build-id }} \
+            --build-id ${{ needs.preview.outputs.android-build-id }} \
             --flow-path .maestro/flows/landing.yml
 
   production:
