--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -230,6 +230,24 @@ jobs:
           rm -f .env
         working-directory: apps/${{ matrix.project }}
 
+  android_e2e:
+    name: Android E2E
+    needs: preview
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup EAS CLI
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: Trigger EAS Workflow
+        run: |
+          npx eas-cli@latest workflow:run .eas/workflows/android-e2e.yml \
+            --non-interactive --wait
+
   production:
     if: |
       github.event_name == 'push' &&
