--- a/apps/nginx/project.json
+++ b/apps/nginx/project.json
@@ -33,12 +33,11 @@
       }
     },
     "deploy": {
+      "command": "tools/deploy/ecs_deploy.sh",
       "configurations": {
+        "production": {},
         "preview": {
           "command": "echo 'Skipping deploy'"
-        },
-        "production": {
-          "command": "tools/deploy/ecs_deploy.sh"
         }
       }
     }
