--- a/apps/betterangels-backend/.env
+++ b/apps/betterangels-backend/.env
@@ -20,6 +20,7 @@ POST_OFFICE_EMAIL_BACKEND=django.core.mail.backends.filebased.EmailBackend
 # POST_OFFICE_EMAIL_BACKEND=django_ses.SESBackend
 
 # Social Account
+ACCOUNT_LOGIN_BY_CODE_ENABLED=True
 SOCIALACCOUNT_APPLE_CLIENT_ID=la.betterangels.dev.app
 SOCIALACCOUNT_GOOGLE_CLIENT_ID="<SOCIALACCOUNT_GOOGLE_CLIENT_ID>"
 SOCIALACCOUNT_GOOGLE_SECRET="<SOCIALACCOUNT_GOOGLE_SECRET>"
