--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ vite.config.*.timestamp*
 vitest.config.*.timestamp*
 **/poetry.lock
 !/poetry.lock
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
