Remove social login

--- a/apps/betterangels-backend/.env
+++ b/apps/betterangels-backend/.env
@@ -19,11 +19,8 @@ DEFAULT_FROM_EMAIL="no-reply@localhost"
 POST_OFFICE_EMAIL_BACKEND=django.core.mail.backends.filebased.EmailBackend
 # POST_OFFICE_EMAIL_BACKEND=django_ses.SESBackend
 
-# Social Account
+# Allauth
 ACCOUNT_LOGIN_BY_CODE_ENABLED=True
-SOCIALACCOUNT_APPLE_CLIENT_ID=la.betterangels.dev.app
-SOCIALACCOUNT_GOOGLE_CLIENT_ID="<SOCIALACCOUNT_GOOGLE_CLIENT_ID>"
-SOCIALACCOUNT_GOOGLE_SECRET="<SOCIALACCOUNT_GOOGLE_SECRET>"
 
 # Google Maps
 GOOGLE_MAPS_API_KEY="<GOOGLE_MAPS_API_KEY>"
