--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-font": "~13.3.1",
     "expo-image-manipulator": "~13.1.3",
     "expo-image-picker": "~16.1.2",
+    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.2",
     "expo-location": "~18.1.2",
     "expo-router": "~5.0.7",
@@ -71,6 +72,7 @@
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.13.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-open-maps": "^0.4.3",
