--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "eas-cli": "^16.8.0",
     "embla-carousel-react": "^8.6.0",
     "expo": "53",
     "expo-apple-authentication": "~7.2.2",
