Remove type stub warning

--- a/mypy.ini
+++ b/mypy.ini
@@ -86,6 +86,9 @@ ignore_missing_imports = True
 [mypy-sesame.*]
 ignore_missing_imports = True
 
+[mypy-storages.*]
+ignore_missing_imports = True
+
 [mypy-time_machine.*]
 ignore_missing_imports = True
 
