--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -303,3 +303,32 @@ jobs:
         run: |
           rm -f .env
         working-directory: apps/${{ matrix.project }}
+
+  maestro-tests:
+    name: 🎭 Maestro E2E Tests
+    runs-on: ubuntu-latest
+    needs: preview
+    strategy:
+      matrix: ${{ fromJson(needs.prepare.outputs.matrix) }}
+    steps:
+      - name: 🏗 Checkout repo
+        uses: actions/checkout@v4
+
+      - name: 📥 Download APK
+        run: |
+          curl -L "${{ needs.preview.outputs.android-build-link }}" -o app.apk
+
+      - name: 🚀 Install Maestro CLI
+        run: |
+          curl -Ls "https://get.maestro.mobile.dev" | bash
+          echo "$HOME/.maestro/bin" >> $GITHUB_PATH
+
+      - name: 🔧 Run Android Emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33
+          arch: x86_64
+          profile: pixel
+          script: |
+            adb install app.apk
+            maestro test .maestro/
