--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -141,6 +141,7 @@ jobs:
       - name: 🧪 Run iOS E2E Tests (Maestro)
         run: |
           eas workflow:run .eas/workflows/e2e-test.yml --non-interactive
+        working-directory: apps/${{ matrix.project }}
 
       - name: 🚀 Perform EAS Update
         id: expo-update
