--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "expo": "53",
+    "expo": "53.0.11",
     "expo-apple-authentication": "~7.2.2",
-    "expo-auth-session": "~6.1.3",
+    "expo-auth-session": "~6.2.0",
     "expo-build-properties": "~0.14.4",
-    "expo-camera": "~16.1.3",
+    "expo-camera": "~16.1.7",
     "expo-clipboard": "~7.1.2",
     "expo-constants": "~17.1.2",
-    "expo-dev-client": "~5.1.3",
+    "expo-dev-client": "~5.2.0",
     "expo-document-picker": "~13.1.3",
     "expo-font": "~13.3.1",
     "expo-image-manipulator": "~13.1.3",
@@ -51,9 +51,9 @@
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.1",
     "expo-sharing": "~13.1.3",
-    "expo-splash-screen": "~0.30.5",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.1",
-    "expo-updates": "~0.28.6",
+    "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.1.4",
     "graphql": "^16.9.0",
     "haversine-distance": "^1.2.3",
@@ -67,7 +67,7 @@
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
     "react-mailchimp-subscribe": "^2.1.3",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-controller": "^1.13.0",
@@ -78,7 +78,7 @@
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "15.11.2",
     "react-native-svg-transformer": "1.5.0",
@@ -158,7 +158,7 @@
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "^29.4.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.7",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "metro": "^0.82.0",
@@ -184,8 +184,7 @@
     "metro-config": ">=0.82.0",
     "micromatch": ">=4.0.8",
     "ws": ">=8.17.1",
-    "@expo/config-plugins": ">=10.0.0",
-    "expo-modules-core@npm:2.3.13": "patch:expo-modules-core@npm%3A2.3.13#~/.yarn/patches/expo-modules-core-npm-2.3.13-79c161064c.patch"
+    "@expo/config-plugins": ">=10.0.0"
   },
   "engines": {
     "node": "22.14.0"
