--- a/apps/betterangels/eas.json
+++ b/apps/betterangels/eas.json
@@ -1,5 +1,14 @@
 {
   "build": {
+    "e2e-test": {
+      "withoutCredentials": true,
+      "ios": {
+        "simulator": true
+      },
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "development-simulator": {
       "developmentClient": true,
       "distribution": "internal",
