--- a/apps/betterangels/.eas/workflows/e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/e2e-test.yml
@@ -10,6 +10,8 @@ jobs:
     params:
       platform: ios
       profile: e2e-test
+      project: ${{ matrix.project }}
+      runtime-version: ${{ steps.setup-secrets.outputs.runtime-version }}
 
   maestro_test:
     needs: [build_ios_for_e2e]
