--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -129,7 +129,9 @@ jobs:
           project: ${{ matrix.project }}
           runtime-version: ${{ steps.setup-secrets.outputs.runtime-version }}
 
-      - name: 🧪 Build Simulator & Run E2E Tests
+      - name: 🧪 Run E2E Tests
+        env:
+          IOS_BUILD_ID: ${{ steps.preview-build.outputs.ios-build-id }}
         run: |
           npx eas-cli workflow:run .eas/workflows/e2e-test.yml --non-interactive
 
