--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -131,10 +131,10 @@ jobs:
 
       - name: 🧪 Run Android E2E Tests
         working-directory: apps/${{ matrix.project }}
-        env:
-          BUILD_ID: ${{ steps.preview-build.outputs.android-build-link }}
         run: |
-          npx eas-cli workflow:run .eas/workflows/android-e2e-test.yml --non-interactive
+          npx eas-cli workflow:run .eas/workflows/android-e2e-test.yml \
+            --non-interactive \
+            --inputs build_id=${{ steps.simulator-build.outputs.android-build-id }}
 
       - name: 📱 Simulator Build
         id: simulator-build
@@ -147,10 +147,10 @@ jobs:
 
       - name: 🧪 Run iOS E2E Tests
         working-directory: apps/${{ matrix.project }}
-        env:
-          BUILD_ID: ${{ steps.simulator-build.outputs.ios-build-link }}
         run: |
-          npx eas-cli workflow:run .eas/workflows/ios-e2e-test.yml --non-interactive
+          npx eas-cli workflow:run .eas/workflows/ios-e2e-test.yml \
+            --non-interactive \
+            --inputs build_id=${{ steps.simulator-build.outputs.ios-build-id }}
 
       - name: 🚀 Perform EAS Update
         id: expo-update
