--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "dependencies": {
     "dotenv": "*",
-    "expo-auth-session": "*",
-    "react-native": "*",
     "expo-router": "*",
     "@nx/devkit": "*",
     "@nx/eslint": "*",
@@ -24,15 +22,19 @@
     "react-native-svg-transformer": "*",
     "@graphql-codegen/cli": "*",
     "@apollo/client": "*",
+    "react-native": "*",
     "axios": "*",
     "react": "*",
+    "expo-constants": "*",
+    "expo-updates": "*",
+    "newrelic-react-native-agent": "*",
     "@react-native-cookies/cookies": "*",
     "react-native-maps": "*",
     "@teovilla/react-native-web-maps": "*",
-    "react-native-keyboard-controller": "*",
     "@storybook/react-webpack5": "*",
     "@storybook/react": "*",
     "@storybook/react-native": "*",
+    "react-fast-compare": "*",
     "react-native-svg": "*",
     "expo-image-manipulator": "*",
     "expo-secure-store": "*",
@@ -43,40 +45,33 @@
     "@react-native-async-storage/async-storage": "*",
     "expo-camera": "*",
     "react-native-reanimated": "*",
+    "react-hook-form": "*",
     "expo-clipboard": "*",
     "react-native-paper": "*",
     "date-fns": "*",
     "@react-native-community/datetimepicker": "*",
-    "react-hook-form": "*",
     "expo-font": "*",
-    "expo-image-picker": "*",
     "@likashefqet/react-native-image-zoom": "*",
     "react-native-gesture-handler": "*",
+    "react-native-keyboard-controller": "*",
+    "expo-location": "*",
     "expo-document-picker": "*",
+    "expo-image-picker": "*",
     "react-native-modal": "*",
     "expo-file-system": "*",
     "react-native-pdf": "*",
     "@react-native-picker/picker": "*",
     "react-native-safe-area-context": "*",
     "react-native-select-dropdown": "*",
+    "@react-navigation/native-stack": "*",
+    "react-native-walkthrough-tooltip": "*",
     "remeda": "*",
     "@types/google.maps": "*",
     "expo-status-bar": "*",
     "expo-sharing": "*",
-    "expo-apple-authentication": "*",
-    "expo-crypto": "*",
     "expo-web-browser": "*",
     "react-native-open-maps": "*",
-    "expo-location": "*",
-    "expo-dev-client": "*",
-    "expo-constants": "*",
-    "expo-application": "*",
-    "@react-navigation/native-stack": "*",
-    "expo-updates": "*",
-    "react-native-walkthrough-tooltip": "*",
-    "newrelic-react-native-agent": "*",
-    "react-fast-compare": "*",
-    "validator": "*"
+    "expo-dev-client": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
