--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -36,6 +36,7 @@
     "@storybook/react-native": "*",
     "react-fast-compare": "*",
     "react-native-svg": "*",
+    "expo-application": "*",
     "expo-image-manipulator": "*",
     "expo-secure-store": "*",
     "@testing-library/jest-native": "*",
@@ -71,7 +72,8 @@
     "expo-sharing": "*",
     "expo-web-browser": "*",
     "react-native-open-maps": "*",
-    "expo-dev-client": "*"
+    "expo-dev-client": "*",
+    "validator": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
