--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "expo": "53.0.11",
+    "expo-application": "~6.1.4",
     "expo-build-properties": "~0.14.4",
     "expo-camera": "~16.1.8",
     "expo-clipboard": "~7.1.2",
