--- a/apps/betterangels/package.json
+++ b/apps/betterangels/package.json
@@ -73,7 +73,8 @@
     "expo-web-browser": "*",
     "react-native-open-maps": "*",
     "expo-dev-client": "*",
-    "validator": "*"
+    "validator": "*",
+    "supercluster": "*"
   },
   "scripts": {
     "eas-build-pre-install": "corepack enable && mkdir -p .yarn && cp -R ../../.yarn/patches .yarn/patches 2>/dev/null || :",
