--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-native-web": "^0.20.0",
     "react-router-dom": "6.11.2",
     "remeda": "^2.20.0",
+    "supercluster": "^8.0.1",
     "tailwind-merge": "^2.5.5",
     "tslib": "^2.3.0",
     "validator": "^13.15.0"
@@ -135,6 +136,7 @@
     "@types/react": "~19.0.10",
     "@types/react-dom": "~19.0.1",
     "@types/react-mailchimp-subscribe": "^2.1.4",
+    "@types/supercluster": "^7.1.3",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react": "^4.2.0",
