--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -1,14 +1,8 @@
 name: e2e-test-ios
 
-on:
-  workflow_dispatch:
-    inputs:
-      build_id:
-        required: true
-
 jobs:
   maestro_test:
     type: maestro
     params:
-      build_id: ${{ fromJSON(env.WORKFLOW_DISPATCH_INPUTS).build_id }}
+      build_id: ${{ env.BUILD_ID }}
       flow_path: ['.maestro/ios/landing.yml']
