--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@testing-library/react": "16.1.0",
     "@testing-library/react-native": "13.2.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/geojson": "^7946.0.16",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "29.5.14",
     "@types/node": "18.19.14",
