--- a/.maestro/ios/landing.yml
+++ b/.maestro/ios/landing.yml
@@ -1,8 +1,7 @@
 appId: la.betterangels.dev.app
 platform: ios
 ---
-- launchApp
-- openLink: la.betterangels.dev.app://expo-development-client/?url=http://localhost:8081
+- openLink: exp+betterangels://expo-development-client/?url=https://u.expo.dev/53171ba4-60ca-40cb-b3e6-b0c2393677b8/group/4eae1320-1f13-418b-9da2-cc1464dceee2?platform=ios&dev=true&minify=false&disableOnboarding=1
 - runFlow:
     when:
       visible: 'Open'
