--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -52,6 +52,12 @@ outputs:
   ios-runtime-version:
     description: 'Runtime version for iOS update.'
     value: ${{ steps.perform-eas-update.outputs.ios-runtime-version }}
+  ios-group-id:
+    description: 'Update Group ID for iOS '
+    value: ${{ steps.perform-eas-update.outputs.ios-group-id }}
+  android-group-id:
+    description: 'Update Group ID for iOS '
+    value: ${{ steps.perform-eas-update.outputs.android-group-id }}
 
 runs:
   using: 'composite'
@@ -87,5 +93,6 @@ runs:
           echo "${platform}-update-qr-url=$update_qr_url" >> $GITHUB_OUTPUT
           echo "${platform}-update-commit=$update_commit" >> $GITHUB_OUTPUT
           echo "${platform}-runtime-version=$runtime_version" >> $GITHUB_OUTPUT
+          echo "${platform}-group-id=$group_id" >> $GITHUB_OUTPUT
         done
       shell: bash
