--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -10,6 +10,9 @@ jobs:
   maestro_test:
     needs: [wait]
     type: maestro
+    env:
+      project_id: ${{ env.PROJECT_ID }}
+      group_id: ${{ env.GROUP_ID }}
     params:
       build_id: ${{ needs.wait.outputs.build_id }}
       flow_path: ['.maestro/ios/landing.yml']
