--- a/.maestro/android/landing.yml
+++ b/.maestro/android/landing.yml
@@ -1,9 +1,7 @@
 appId: la.betterangels.dev.app
 platform: android
 ---
-- runScript:
-    script: |
-      adb shell am start -a android.intent.action.VIEW -d "exp+betterangels://expo-development-client/?url=https://u.expo.dev/$MAESTRO_ENV_PROJECT_ID/group/$MAESTRO_ENV_GROUP_ID?platform=android&dev=true&minify=false&disableOnboarding=1"
+- openLink: 'exp+betterangels://expo-development-client/?url=https://u.expo.dev/$MAESTRO_ENV_PROJECT_ID/group/$MAESTRO_ENV_GROUP_ID?platform=android&dev=true&minify=false&disableOnboarding=1'
 - runFlow:
     when:
       visible: 'Open'
