--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -11,8 +11,8 @@ jobs:
     needs: [wait]
     type: maestro
     env:
-      MAESTRO_ENV_PROJECT_ID: ${{ env.PROJECT_ID }}
-      MAESTRO_ENV_GROUP_ID: ${{ env.GROUP_ID }}
+      MAESTRO_APP_ID: ${{ env.PROJECT_ID }}
+      MAESTRO_GROUP_ID: ${{ env.GROUP_ID }}
     params:
       build_id: ${{ needs.wait.outputs.build_id }}
       flow_path: ['.maestro/ios/landing.yml']
