no bad ideas at this point

--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -12,4 +12,7 @@ jobs:
     type: maestro
     params:
       build_id: ${{ needs.wait.outputs.build_id }}
-      flow_path: ['.maestro/ios/landing.yml']
+      flow_path:
+        [
+          '.maestro/ios/landing.yml -e MAESTRO_GROUP_ID=4eae1320-1f13-418b-9da2-cc1464dceee2',
+        ]
