--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -149,7 +149,7 @@ jobs:
 
       - name: 🧪 Run Android E2E Tests
         env:
-          GROUP_ID: ${{ steps.perform-eas-update.outputs.ios-group-id }}
+          GROUP_ID: ${{ steps.perform-eas-update.outputs.android-group-id }}
           PROJECT_ID: ${{ steps.preview-build.outputs.project-id }}
           RUNTIME_VERSION: ${{ steps.perform-eas-update.outputs.android-runtime-version }}
         working-directory: apps/${{ matrix.project }}
