--- a/apps/betterangels/.env
+++ b/apps/betterangels/.env
@@ -1,2 +1,5 @@
 EXPO_PUBLIC_API_URL=https://api.dev.betterangels.la
 EXPO_PUBLIC_DEMO_API_URL=http://localhost:8000
+
+MAESTRO_GROUP_ID=4eae1320-1f13-418b-9da2-cc1464dceee2
+MAESTRO_PROJECT_ID=53171ba4-60ca-40cb-b3e6-b0c2393677b8
